class ApiConfig {
  static const String token = '';
  static const String tokenType = 'Bearer';
  static const String authorization = '$tokenType $token';
}