@startuml
'https://plantuml.com/class-diagram
Title Diagram class of data package
header Updated by Anderson Guiera\non October, 18th 2021

note as package_indicators
Data package

|= indicator |= description |= value |
| Nc | number of classes | 16 |
| Na | number of abstract classes | 1 |
| A | level of abstraction\n A = Na/Nc | 0.03 |
end note

skinparam << extension >> {
    stereotypeCBackgroundColor orchid
    spotChar X
}

skinparam groupInheritance 3

namespace dart{
    namespace core {
        class Exception
    }
}

namespace domain {
    namespace model {
        class User{
            +final dynamic id
            +final String name
            +final String email
            +final String gender
            +final String status
            +{static} User empty

            +User copyWith({String? name, String? email, String? gender, String? status})
        }

        class Paginated<T> {
            +final int total
            +final int size
            +final int pages
            +final int page
            +final List<T> elements
        }
    }
    namespace repository {
        interface UserRepository {
            +Future<Paginated<User>> getUsers({int? page})
            +Future<User> getUser(dynamic id)
            +Future<User> saveUser(User user)
            +Future<void> deleteUser(dynamic id)
            +Future<Paginated<User>> findByName(String name, {int page = 1})
            +Future<Paginated<User>> findByEmail(String email, {int page = 1})
        }
    }

    namespace exceptions {
        interface DomainException implements dart.core.Exception{
          String get fancyMessage;
          String get completeMessage;
          StackTrace? get stackTrace;
        }
        interface UnauthorisedException implements DomainException
        interface ForbiddenException implements DomainException
        interface NotFoundException implements DomainException
        interface IOException extends DomainException
    }
}

namespace data{
    namespace datasource{
        namespace remote{
            namespace DTO {
                class UserDTO {
                  +dynamic id
                  +String name
                  +String email
                  +String gender
                  +String status

                  +Map<String,dynamic> toJson()
                  +UserDTO fromJson(Map<String, dynamic> json)
                }

                class Links {
                  +String? previous
                  +String current
                  +String? next

                  +Links fromJson(Map<String, dynamic> json)
                  +Map<String, dynamic> toJson()
                }

                class Pagination {
                  +int total
                  +int pages
                  +int page
                  +int limit
                  +Links links
                  +Pagination fromJson(Map<String, dynamic> json)
                  +Map<String, dynamic> toJson()
                }

                class MetaData {
                  +Pagination pagination;
                  +MetaData fromJson(Map<String, dynamic> json)
                  +Map<String, dynamic> toJson()
                }

                class RestResponse < T > {
                  + MetaData? meta;
                  + T data;
                  +RestResponse fromJson(Map<String, dynamic> json)
                  Map<String, dynamic> toJson()
                }

                Pagination *--> Links
                MetaData *--> Pagination
                RestResponse *--> MetaData
            }

            abstract class UserRepositoryRemoteServices {
                +Future<RestResponse<UserDTO>> getUser(dynamic id)
                +Future<RestResponse<List<UserDTO>>> getUsers({int? page})
                +Future<RestResponse<UserDTO>> createUser(UserDTO user)
                +Future<RestResponse<UserDTO>> updateUser(UserDTO user)
                +Future<void> deleteUser(dynamic id)
            }

            class ApiConfig {
                +{static} String token
                +{static} String tokenType
                +{static} String authorization
            }

            UserRepositoryRemoteServices -- ApiConfig : > is configured
            data.repository.UserRepositoryRemoteImpl O--> UserRepositoryRemoteServices : service
        }
    }

    namespace exceptions{
        abstract class DataException implements domain.exceptions.DomainException {
          -final String _prefix
          -final String _message
          -final StackTrace? _stackTrace
          +String fancyMessage
          +String completeMessage
          +StackTrace? stackTrace
          +String toString()
        }

        class BadRequestException extends DataException implements domain.exceptions.IOException
        class UnauthorisedException extends DataException implements domain.exceptions.UnauthorisedException
        class ForbiddenException extends DataException implements domain.exceptions.ForbiddenException
        class NotFoundException extends DataException implements domain.exceptions.NotFoundException
        class FetchDataException extends DataException implements domain.exceptions.IOException
    }

    namespace repository {
        class UserRepositoryRemoteImpl implements domain.repository.UserRepository {
            -AppException _handleDioError(DioError error)
            -AppException _handleError(Object error)
        }
    }

    namespace mapper {
        class UserMapper <<extension>> {
            +UserDTO toDTO()
        }

        class UserDTOMapper <<extension>> {
            +User toModel()
        }

        note "**<<extension>>** stereotype\nrepresents dart extension\nof class\n**extended** relationship shows\ndirection of this relationship.\nEx.:\nUser u = User(params);\nUserDTO uDTO = u.toDTO();" as extension_note

        domain.model.User ..> UserMapper : extended
        data.datasource.remote.DTO.UserDTO ..> UserDTOMapper : extended
    }

    "data.repository" ..> "data.exceptions" : depends
    "data.repository" ..> "data.mapper" : depends

}
@enduml